--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "rm -rf dist && webpack",
+    "build": "rm -rf dist && tsc",
     "test": "jest"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/node": "^14.14.2",
-    "@types/webpack": "^4.41.23",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
@@ -24,11 +23,8 @@
     "jest": "^26.6.1",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.4.2",
-    "ts-loader": "^8.0.7",
+    "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.0.3"
   }
 }
