--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "yarn build && yarn publish"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
@@ -25,6 +26,7 @@
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "yarn": "^1.22.10"
   }
 }
