--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shallot",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "A robust middleware framework for Serverless REST APIs",
   "keywords": [
     "middleware",
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
+    "@types/content-type": "^1.1.3",
+    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -39,5 +41,9 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
     "yarn": "^1.22.10"
+  },
+  "dependencies": {
+    "content-type": "^1.0.4",
+    "http-errors": "^1.8.0"
   }
 }
