--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy": "yarn build && yarn publish"
   },
   "devDependencies": {
+    "@types/ajv": "^1.0.0",
     "@types/aws-lambda": "^8.10.64",
     "@types/content-type": "^1.1.3",
     "@types/http-errors": "^1.8.0",
@@ -43,6 +44,7 @@
     "yarn": "^1.22.10"
   },
   "dependencies": {
+    "ajv": "^6.12.6",
     "content-type": "^1.0.4",
     "http-errors": "^1.8.0"
   }
