--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 12
       - run: yarn
-      - run: npm test
+      - run: yarn test
 
   publish-npm:
     needs: test
