--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -2,7 +2,7 @@ name: Shallot PR Validation
 
 on:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, edited, synchronize]
 
 jobs:
   lint:
