--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
   },
   "devDependencies": {
     "@azure/functions": "^1.2.2",
-    "@types/ajv": "^1.0.0",
     "@types/aws-lambda": "^8.10.64",
-    "@types/content-type": "^1.1.3",
-    "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -44,9 +41,5 @@
     "typescript": "^4.0.3",
     "yarn": "^1.22.10"
   },
-  "dependencies": {
-    "ajv": "^6.12.6",
-    "content-type": "^1.0.4",
-    "http-errors": "^1.8.0"
-  }
+  "dependencies": {}
 }
