--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && webpack",
     "test": "jest",
     "postversion": "git push && git push --tags"
   },
@@ -28,6 +28,8 @@
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.2",
+    "@types/webpack": "^4.41.25",
+    "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
@@ -38,8 +40,12 @@
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2",
     "yarn": "^1.22.10"
   },
   "dependencies": {}
