Fix yarn auth token publish bug

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,6 +37,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+          always-auth: true
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: yarn install
@@ -58,4 +60,4 @@ jobs:
       - name: Publish to NPM
         run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
