Add config files to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "noUnusedParameters": true,
     "strict": true
   },
-  "include": ["src"]
+  "include": ["src", "webpack.config.ts", "jest.config.ts"]
 }
