--- a/package.json
+++ b/package.json
@@ -23,30 +23,31 @@
     "postversion": "git push && git push --tags"
   },
   "devDependencies": {
-    "@azure/functions": "^1.2.2",
-    "@types/aws-lambda": "^8.10.64",
+    "@azure/functions": "^1.2.3",
+    "@types/aws-lambda": "^8.10.76",
     "@types/http-errors": "^1.8.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.2",
-    "@types/webpack": "^4.41.25",
-    "@types/webpack-node-externals": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "jest": "^26.6.1",
-    "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.11",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-node-externals": "^2.5.2",
-    "yarn": "^1.22.10"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-node-externals": "^2.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.36.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-node-externals": "^3.0.0",
+    "yarn": "^1.22.10",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "dependencies": {}
 }
