--- a/.github/workflows/open-pr.yml
+++ b/.github/workflows/open-pr.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   lint:
+    name: Run linting
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
@@ -19,7 +20,7 @@ jobs:
           node-version: 12
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run eslint
         run: yarn eslint
@@ -28,6 +29,7 @@ jobs:
         run: yarn prettier -c .
 
   test:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
@@ -41,7 +43,7 @@ jobs:
           node-version: 12
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run unit tests
         uses: mattallty/jest-github-action@v1
